[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pytool-directory"
version = "0.0.1"
authors = [
    {name = "Sheile"},
]
description = "Python package to create langchain tool from the Tool Directory For LangChain."
readme = "README.md"
requires-python = ">=3.9"
keywords = ["langchain", "gpt", "dialogplay"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "flake8",
    "pyproject-flake8",
    "flake8-quotes",
]

[tool.flake8]
exclude = [
  "./build"
]
max-line-length = 120
inline-quotes = "single"
multiline-quotes = "single"
docstring-quotes = "single"
